# GpsTracker

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: cmake.yml
app/: application.cpp  application.h  common_type.c  common_type.h  version.h
app/config/: config.c  config.h  types.h
app/debug/: log_libs.c
app/gps/: GnssParser.cpp  GnssParser.hpp  data_types.h
app/interfaces/: Serial.cpp  Serial.hpp  System.cpp  System.hpp
app/io/gpio/: agpio.h  gpio.h
app/io/serial/: Serial.cpp  Serial.hpp  aspi.h  types.h
app/io/serial/cobs/: serial.cpp  serial.h
app/process/: WorkingWdt.cpp  WorkingWdt.hpp
app/process/autonomous/: process.cpp  process.hpp
app/process/external_power/: process.cpp  process.hpp
app/proto/: commands.c  commands.h
app/proto/cobs/: Parser.cpp  Parser.hpp  process.cpp  wrapper.cpp  wrapper.h
app/proto/nmea/: Parser.cpp  Parser.hpp  types.h
app/storage/: GnssLog.cpp  GnssLog.hpp  Log.cpp  Log.hpp  backup.cpp  backup.hpp  common.cpp  common.hpp  log_partition.hpp
app/system/: System.cpp  System.hpp  WorkingWdt.cpp  WorkingWdt.hpp  common.c  common.h  config.c  config.h  config_types.h  system.cpp  system.h  wrapper.cpp  wrapper.h
app/utils/: build_marks.c  build_marks.h  build_marks_actual.c  crc32.h  data_print.cpp  data_print.h  nmea.cpp  nmea.hpp  time_utils.h  timer_measurement.h
config/: CMakeLists.txt  build_marks.c.in  common.cmake  desktop.cmake  emu.cmake  libs.cmake  mcu.cmake  tests.cmake  utils.cmake  version.h.in
doc/: MotionDetectionAlgo.md
hw_test/: CMakeLists.txt
hw_test/ws407/: CMakeLists.txt  hw_test.cmake
hw_test/ws407/adxl345/: CMakeLists.txt  application.cpp
hw_test/ws407/backup_register/: CMakeLists.txt  application.cpp
hw_test/ws407/gy-gps6mv2/: CMakeLists.txt  application.cpp
hw_test/ws407/lis3dh/: CMakeLists.txt  application.cpp
hw_test/ws407/lis3dsh/: CMakeLists.txt  application.cpp
hw_test/ws407/log-w25q32/: CMakeLists.txt  application.cpp
hw_test/ws407/stanby/: CMakeLists.txt  application.cpp
hw_test/ws407/w25q32/: CMakeLists.txt  application.cpp
libs/: CMakeLists.txt
libs/SEGGER_RTT_V762c/Config/: SEGGER_RTT_Conf.h
libs/adxl345/: ADXL345.c  ADXL345.h
libs/hw/lis3dsh/: lis3dsh.c  lis3dsh.h
libs/lis3dh/: lis3d_ctrl.c  lis3d_ctrl.h  lis3dh_driver.c  lis3dh_driver.h
libs/lis3dsh/: lis3dsh.c  lis3dsh.h
libs/ringfs-0.2.0/: ringfs.c
libs/ringfs-0.2.0/tests/: flashsim.c
resources/: gnss_test.txt
scripts/: acc_toggle_pin.sh  acc_toggling.sh  emu_default_state.sh  extpwr_toggle_pin.sh  nullmodem_ttyS10-S11.sh  send_gnss_test_data.sh
scripts/nmeasim/: requirements.txt  sim.py
targets/: CMakeLists.txt
targets/desktop/: CMakeLists.txt  main.cpp
targets/desktop/impl/: Sdev.cpp  Sdev.hpp  SystemEmu.cpp  SystemEmu.hpp
targets/desktop/io_mock/: Sdev.cpp  Sdev.hpp  io_mock.c  io_mock.h
targets/desktop/mocks/: config.c  delay_mock.c  io_gpio.c  time_utils_mock.c  timer_mock.c
targets/desktop/system/: esystem.cpp
targets/f407common/: SystemHw.cpp  SystemHw.hpp  hwsystem.cpp  time_utils.c  timer_measurement.c
targets/ws407/: CMakeLists.txt  STM32F407VETx_FLASH.ld  ws407.ioc
targets/ws407/Core/Inc/: main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usart.h
targets/ws407/Core/Src/: gpio.c  io_gpio.c  main.c  rtc.c  spi.c  stm32f4xx_it.c  usart.c
targets/ws407/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
test/: CMakeLists.txt
test/cobs/: CMakeLists.txt  main.cpp
test/gps_serial_emu/: CMakeLists.txt  main.cpp
test/logging/: CMakeLists.txt  main.cpp
test/nmea/: CMakeLists.txt  main.cpp
test/ringfs/: CMakeLists.txt  main.cpp
test/wakeuping/: CMakeLists.txt  main.cpp
utils/console/: __init__.py  commands.py  main.py  requirements.txt
utils/console/proto/: ack.py  config.py  proto.py  reports.py
utils/emuvenv/: console.py  main.py  requirements.txt
utils/nmeasim/: sim.py
